fix: banner-relative z-indices and scrollbar

--- a/static/theme.css
+++ b/static/theme.css
@@ -181,7 +181,11 @@ body::before {
     background-color: var(--lean-compl-yellow);
     font-family: var(--verso-structure-font-family);
     font-size: large;
-    z-index: 10; /* don't show under marginal notes*/
+    z-index: -1; /* don't show under marginal notes*/
+}
+
+span.TODO, .marginalia .note {
+    z-index: -2;
 }
 
 #print {
